WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24262
[Qt] SVGs stroked text support missing
https://bugs.webkit.org/show_bug.cgi?id=24262
Summary
[Qt] SVGs stroked text support missing
Dirk Schulze
Reported
2009-02-28 10:32:42 PST
Qt lacks support for stroked texts in SVG.
Attachments
stroked texts on Qt
(2.19 KB, patch)
2009-02-28 10:35 PST
,
Dirk Schulze
zecke
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2009-02-28 10:35:52 PST
Created
attachment 28119
[details]
stroked texts on Qt adds the missing support.
Holger Freyther
Comment 2
2009-03-12 22:55:06 PDT
Comment on
attachment 28119
[details]
stroked texts on Qt
> - p->drawText(pt, string, flags, run.padding()); > + > + if (ctx->textDrawingMode() & cTextStroke) { > + QPainterPath path; > + path.addText(pt, font(), string); > + p->strokePath(path, p->pen()); > + } > + if (ctx->textDrawingMode() & cTextFill) > + p->drawText(pt, string, flags, run.padding());
cool, can you point me to a test case that is having cTextStroke and cTextFill for drawing text?
Dirk Schulze
Comment 3
2009-03-13 11:59:05 PDT
stroke on text with gradient:
http://www.w3.org/Graphics/SVG/Test/20061213/htmlObjectHarness/full-pservers-grad-11-b.html
stroke on text with pattern:
http://www.w3.org/Graphics/SVG/Test/20061213/htmlObjectHarness/full-pservers-pattern-01-b.html
stroke and fill on text:
http://www.w3.org/Graphics/SVG/Test/20061213/htmlObjectHarness/full-text-deco-01-b.html
as well as:
http://www.w3.org/Graphics/SVG/Test/20061213/htmlObjectHarness/full-text-text-08-b.html
Dirk Schulze
Comment 4
2009-03-18 08:59:37 PDT
landed in
r41808
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug