2009-03-18  Dirk Schulze  <krit@webkit.org>

Reviewed by Holger Freyther.

        Added support for SVG's stroked texts to Qt.

        [Qt] SVGs stroked text support missing
        https://bugs.webkit.org/show_bug.cgi?id=24262

        * platform/graphics/qt/FontQt.cpp:
        (WebCore::Font::drawComplexText):


Canonical link: https://commits.webkit.org/33865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41808 268f45cc-cd09-0410-ab3c-d52691b4dbfc