WebCore/platform/graphics/qt/FontQt.cpp
@@ -104,12 +104,12 @@ void Font::drawComplexText(GraphicsContext* ctx, const TextRun& run, const Float
         if (ctx->strokeGradient()) {
             QBrush brush(*ctx->strokeGradient()->platformGradient());
             brush.setTransform(ctx->strokeGradient()->gradientSpaceTransform());
-            p->setPen(QPen(brush, 0));
+            p->setPen(QPen(brush, ctx->strokeThickness()));
         } else if (ctx->strokePattern()) {
             TransformationMatrix affine;
-            p->setPen(QPen(QBrush(ctx->strokePattern()->createPlatformPattern(affine)), 0));
+            p->setPen(QPen(QBrush(ctx->strokePattern()->createPlatformPattern(affine)), ctx->strokeThickness()));
         } else
-            p->setPen(QColor(ctx->strokeColor()));
+            p->setPen(QPen(QColor(ctx->strokeColor()), ctx->strokeThickness()));
     }
 
     const QString string = fixSpacing(qstring(run));
@@ -174,7 +174,13 @@ void Font::drawComplexText(GraphicsContext* ctx, const TextRun& run, const Float
         p->drawText(pt, string, flags, run.padding());
         p->restore();
     }
-    p->drawText(pt, string, flags, run.padding());
+    if (ctx->textDrawingMode() & cTextStroke) {
+        QPainterPath path;
+        path.addText(pt, font(), string);
+        p->strokePath(path, p->pen());
+    }
+    if (ctx->textDrawingMode() & cTextFill)
+        p->drawText(pt, string, flags, run.padding());
 }
 
 float Font::floatWidthForComplexText(const TextRun& run) const
